--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -9,20 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from helpers import convert_valor_to_numerical"
+    "from helpers import convert_valor_to_numerical\n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +274,7 @@
        "[5 rows x 200 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +305,7 @@
        "Length: 200, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +326,7 @@
        "53"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +376,7 @@
        "Name: Valor, Length: 3200, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +412,7 @@
        "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +452,7 @@
        "Name: Valor, Length: 3200, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +512,7 @@
       " 34  Comprimento (mm)                           3145 non-null   float64\n",
       " 35  Ano                                        3200 non-null   object \n",
       " 36  Cidade                                     3200 non-null   object \n",
-      " 37  Valor                                      3200 non-null   object \n",
+      " 37  Valor                                      3200 non-null   int64  \n",
       " 38  Versao                                     3200 non-null   object \n",
       " 39  KM                                         3200 non-null   object \n",
       " 40  Fabricante                                 3200 non-null   object \n",
@@ -517,7 +527,7 @@
       " 49  Tempo 0-100 (s)                            3200 non-null   object \n",
       " 50  Consumo cidade (km/l)                      3200 non-null   object \n",
       " 51  Consumo estrada (km/l)                     3200 non-null   object \n",
-      "dtypes: float64(9), object(43)\n",
+      "dtypes: float64(9), int64(1), object(42)\n",
       "memory usage: 1.3+ MB\n"
      ]
     }
@@ -528,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +550,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +584,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +616,7 @@
        "Length: 3200, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +636,7 @@
        "7.48375"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +656,7 @@
        "116"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +792,7 @@
        "[3200 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1202,7 @@
        "[3200 rows x 54 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1224,13 +1234,131 @@
        "Name: count, Length: 2095, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2[['Ano', 'Modelo', 'Versao']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: definir valores faltantes de carros iguais pelo valor da maioria. Em caso de todos serem NaN, definir como nao tendo o item. \n",
+    "# Isso tem que vir antes de remover as colunas com muitos NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identificador_unico = []\n",
+    "for ano, modelo, versao in zip(df2['Ano'], df2['Modelo'], df['Versao']):\n",
+    "    identificador_unico.append('{}-{}-{}'.format(ano, modelo, versao))\n",
+    "\n",
+    "df2['Carro ID'] = identificador_unico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23948"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "for carro_id in df2['Carro ID']:\n",
+    "    mask = df2['Carro ID'] == carro_id\n",
+    "    columns = df2.columns.tolist()\n",
+    "    to_fillna = dict(zip(columns, df2[mask].mode().loc[0,:].values.tolist()))\n",
+    "    df2[mask] = df2[mask].fillna(to_fillna)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21404"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_to_fillna = df2[df2['Carro ID']=='2023/2024-Renegade-T270 1.3 Turbo 4x2'].mode().loc[0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.fillna('Não')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.isnull().sum().sum()"
    ]
   }
  ],
